# bia-integrator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
annotation-data-converter/: .env_template  .gitignore  README.md  pyproject.toml
annotation-data-converter/annotation_data_converter/: api_client.py  cli.py  create_curation_directive.py  settings.py  utils.py
annotation-data-converter/test/: conftest.py  test_point_annotation_processing.py
api/: .dockerignore  .env_compose  .env_template  .gitignore  Dockerfile  Makefile  Readme.md  conda_env.yml  docker-compose.yml  pyproject.toml
api/.share/: mongo.conf
api/api/: api_logging.py  app.py  auth.py  constants.py  exceptions.py  log_config.yml  private.py  public.py  search.py  settings.py
api/helm-chart/: Chart.yaml  values.yaml
api/local/: .env_template  README.md  helmsman_local.yml  mongo_values.yml
api/local-minikube/: README.md  api_values.yml  api_values_non_throwaway.yml  mongo_values.yml
api/scripts/: elastic_refresh.sh
api/src/: .env_template  app.py  log_config.yml
bia-assign-image/: .env_template  README.md  pyproject.toml
bia-assign-image/bia_assign_image/: api_client.py  cli.py  config.py  creation_process.py  image.py  image_assignment.py  image_representation.py  propose.py  settings.py  specimen.py  utils.py
bia-assign-image/scripts/: README.md  fix_additional_metadata.py  map_image_related_artefacts_to_2025_04_models.py  migrate_image_representations.py  script_cli.py  update_datasets.py
bia-assign-image/tests/: conftest.py  test_assign_image.py  test_assign_image_with_pattern.py  test_bia_assign_image_cli.py  test_bia_assign_image_with_pattern_cli.py  test_fix_image_additional_metadata_static_uri.py  test_fix_image_additional_metadata_thumbnail_uri.py  test_image_representation.py  test_map_image_related_artefacts_to_2025_04_models.py  test_map_image_related_artefacts_to_2025_04_models_script.py  test_propose.py  test_propose_first_n_convertible_file_references.py  test_propose_source_and_annotation_image.py  test_store_object_in_api_idempotent.py  test_update_dataset_example_image_uri_after_mapping_to_2025_04_models.py
bia-converter/: .env_template  .gitignore  README.md  README.rst  pyproject.toml
bia-converter-light/: .env_template  README.md  file_references_to_convert.tsv  pyproject.toml
bia-converter-light/bia_converter_light/: cli.py  config.py  conversion.py  experimentally_captured_image.py  image_representation.py  io.py  propose_utils.py  utils.py
bia-converter-light/scripts/: print_details_of_convertible_images.py  unzip_and_stage_sbiad1117.py
bia-converter-light/test/: conftest.py  test_cli.py  test_conversion_util_funcs.py  test_create_thumbnails.py  test_image_representation.py  test_io_funcs.py
bia-converter/bia_converter/: bia_api_client.py  cli.py  config.py  conversion.py  convert.py  io.py  ng_overlay.py  omezarrgen.py  omezarrmeta.py  proxyimage.py  rendering.py  settings.py  utils.py  zarr2zarr.py
bia-converter/scripts/: .gitignore  README.md  assign_and_convert_images.sh  generate_neuroglancer_link.py  set_local_env_template.sh  update_example_image_uri_for_dataset.py
bia-converter/tests/: conftest.py  test_bia_converter_utils.py  test_cli.py  test_cli_for_creation_of_2d_views.py  test_cli_for_image_conversion.py  test_cli_post_update_commands.py  test_multi_plane_conversion.py  test_running_bioformats2raw.py
bia-curate/: README.md  pyproject.toml
bia-curate/bia_curate/: client.py
bia-curate/tests/: test_client.py
bia-embed/: Readme.md  pyproject.toml
bia-embed/bia_embed/: cli.py  settings.py  util.py
bia-export/: .env_export  Dockerfile  Makefile  README.md  bia-study-metadata.json  image_file_ref_study_by_study.py  pyproject.toml  test.json
bia-export/bia_export/: bia_client.py  cli.py  settings.py  test_embed.py  website_conversion.py  website_models.py
bia-export/cached_computed_data/: dataset_aggregate_fields.json
bia-export/export/: Chart.yaml  values.yaml
bia-export/nextflow/: .gitignore  README.md  nextflow.config_template  run_bia_export.nf  set_local_env.sh_template
bia-export/scripts/: combine_export_files.py  elastic_refresh.sh  elastic_refresh_with_embeddings.sh
bia-export/test/: conftest.py  test.env_export  test_api_export.py  test_combine_export_files.py  test_local_convert.py
bia-ingest/: .env_template  .gitignore  README.md  parallel_ingest.py  pyproject.toml  test_study.json
bia-ingest-shared-models/: README.md  pyproject.toml
bia-ingest-shared-models/bia_ingest_sm/: biostudies.py  cli.py  cli_logging.py  config.py  conversion.py
bia-ingest-shared-models/test/: conftest.py  test_bia_ingest_cli.py  test_file_reference.py  test_image_representation.py  test_shared_models.py  utils.py
bia-ingest/bia_ingest/: api_client.py  bia_object_creation_utils.py  biostudies.py  cli.py  cli_logging.py  config.py  conversion.py  debug_entry.py  logging_configuration.py  models.py  persistence_strategy.py  scli.py  serialiser.py  settings.py  visitor.py
bia-ingest/dev/: pyproject.toml
bia-ingest/input_files/: ingested_submissions  uningested_studies_of_interest
bia-ingest/scripts/: assign_image_acquisitions_to_images.py  biostudies_fields_stats.py  clustering.py  compare_biostudies_and_api_submission.py  create_specimens.py  create_specimens_and_updated_eids.py  get_all_bia_studies.py  images-converted-for-sab.yaml  (+4 more)
bia-ro-crate/: .gitignore  cli.py  pyproject.toml
bia-search/: .env_compose  .env_template  Dockerfile  Makefile  Readme.md  pyproject.toml
bia-shared-datamodels/: README.md  Readme.md  invalid_context.jsonld.context  pyproject.toml
bia-test-data/: pyproject.toml
core/: README.md  pyproject.toml
curation/: README.md  pyproject.toml
data-migration/: Readme.md  env_reset.sh  migration.py  pyproject.toml  skip.txt
persistence/: .env_template  .gitignore  README.md  Readme.md  pyproject.toml
ro-crate-ingest/: .env_template  .gitignore  Readme.md  pyproject.toml
tools/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
(+3027 files in other folders)
