[tool.poetry]
name = "bia-integrator-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.0"
fastapi = "^0.103.2"
motor = "^3.1.2"
requests = "^2.29.0"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
ome-types = "^0.4.2"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
locust = "^2.16.1"
pyyaml = "^6.0.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
