[tool.poetry]
name = "bia-integrator-api"
version = "0.2.3"
description = ""
authors = []
readme = "Readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "~2.8.0"
fastapi = "^0.103.2"
motor = "^3.1.2"
requests = "^2.29.0"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
ome-types = "^0.4.2"
# transitive dependency from ome-types
#   not directly needed except the latest version crashes the api on start
xsdata = "23.8"
json-log-formatter = "^1.0"
#@TODO: CHANGEME
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
pydantic-settings = "^2.3"
# FIXME
#   gevent 24.10.3 released https://pypi.org/project/gevent/#history
#   but getting 'Unable to find installation candidates for gevent (24.10.3)' from poetry when trying to install
#   so pin to the latest previous version
#   to check if issue still occurs, comment line below & poetry lock; if it doesn't, delete this
gevent = "24.10.2"
aiohttp = "^3.11.13"
lxml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
locust = "^2.16.1"
pyyaml = "^6.0.1"
pytest = "^7"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
rdflib = "^7.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
