[tool.poetry]
name = "bia-assign-image"
version = "0.1.0"
description = "Assign file references to BIA image objects"
authors = ["Kola <kola@ebi.ac.uk>"]
license = "Apache Software License 2.0"
readme = "README.md"
packages = [{include = "bia_assign_image"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
bia-integrator-api = { path = "../clients/python", develop = true }
bia-test-data = { path = "../bia-test-data", develop = true }
typer = "^0.15.1"
ruamel-yaml = "^0.18.10"

[tool.poetry.scripts]
bia-assign-image = "bia_assign_image.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
ipython = "^8.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
