[tool.poetry]
name = "bia-converter"
version = "0.1.0"
description = "BioImage Archive internal conversion package"
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>", "Kola Babalola <kola@ebi.ac.uk>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "bia_converter"}]

[tool.poetry.dependencies]
python = "^3.13"
rich = "^13.8.1"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
bia-integrator-api = { path = "../clients/python", develop = true }
bia-test-data = { path = "../bia-test-data", develop = true }
typer = "^0.12.5"
click = "<=8.1.7"
requests = "^2.32.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
parse = "^1.20.2"
zarr = "3.1.3"
numcodecs = "<= 0.14.1"
dask = "^2024.12.1"
pillow = "^11.1.0"
microfilm = "^0.3.0"
aiohttp = "^3.11.11"
tensorstore = "^0.1.71"
ngff-zarr = "^0.19.1"

[tool.poetry.scripts]
bia-converter = "bia_converter.cli:app"
zarr2zarr = "bia_converter.zarr2zarr:app"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
