[tool.poetry]
name = "bia-export"
version = "0.1.0"
description = "BIA export functionality"
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "bia_export"}]

[tool.poetry.scripts]
bia-export = "bia_export.cli:app"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pydantic = "^2"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
bia-integrator-api = {git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python" }
zarr = "^2.16.1"
fsspec = "^2023.10.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
rich = "^13.7.0"
ruamel-yaml = "^0.18.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
pytest = "^7.4.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
