[tool.poetry]
name = "bia-export"
version = "0.1.0"
description = "BIA export functionality"
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "bia_export"}]

[tool.poetry.scripts]
bia-export = "bia_export.cli:app"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
bia-test-data = { path = "../bia-test-data", develop = true }
bia-integrator-api = { path = "../clients/python", develop = true }
zarr = "^2.16.1"
fsspec = "^2023.10.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"
typer = "^0.17.4"
rich = "^13.7.0"
ruamel-yaml = "^0.18.5"
deepdiff = "6.7.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
pytest = "^7.4.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
