[tool.poetry]
name = "bia-ingest-sm"
version = "0.1.0"
description = "BIA ingest using shared models"
authors = ["Kola Babalola <kola@ebi.ac.uk>"]
license = "Apache Software License 2.0"
readme = "README.md"
packages = [{include = "bia_ingest_sm"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
#bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
pytest = "^7.0"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
