[tool.poetry]
name = "bia-ingest-sm"
version = "0.1.0"
description = "BIA ingest using shared models"
authors = ["Kola Babalola <kola@ebi.ac.uk>"]
license = "Apache Software License 2.0"
readme = "README.md"
packages = [{include = "bia_ingest_sm"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
requests = "^2.31.0"
pytest = "^7.0"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
typer = "^0.12.3"
typing-extensions = "^4.12.2"
pydantic-settings = "^2.3.4"

# TEMPORARY DEPENDENCIES FROM bia_converter
zarr = "^2.18.3"
dask = "^2024.8.2"
microfilm = "^0.2.1"
setuptools = "^74.1.2"
fsspec = "^2024.9.0"
s3fs = "^2024.9.0"

[tool.poetry.scripts]
biaingest = "bia_ingest_sm.cli:app"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
