[tool.poetry]
name = "bia-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
json-log-formatter = "^1.0"
pydantic-settings = "^2.3"
pydantic = "^2.4.0"
fastapi = "^0.103.2"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
elasticsearch = "^8.17.2"
aiohttp = "^3.11.13"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
