[tool.poetry]
name = "bia-shared-datamodels"
version = "0.1.0"
description = "Schemas and models for working with the BioImage Archive's (Metadata, Incentives, Formats and Accessibility) metadata implementation"
authors = ["Francois Sherwood <fsherwood@ebi.ac.uk>"]
license = "Apache Software License 2.0"
readme = "README.md"
packages = [{include = "bia_shared_datamodels", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pydantic = {version = "^2", extras = ["email"]}
pydantic-2-mermaid = "^0.7"
pytest = "^7"
rdflib = "^7"
rocrate = "^0"
roc-validator = "^0"
pyld = "^2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

# [tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
