[tool.poetry]
name = "bia-test-data"
version = "0.1.0"
description = "Test data - biostudies submission, images and other artefacts"
authors = ["Kola <kola@ebi.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "bia_test_data"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
bia-integrator-api = {git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python" }
pydantic-settings = "^2.3.4"
python-on-whales = "^0.74.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
