[tool.poetry]
name = "bia-integrator-core"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "bia_integrator_core"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
click = "^8.1.3"
ome_types = "^0.3.3"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
