[tool.poetry]
name = "data-migration"
version = "0.1.0"
description = ""
authors = ["Liviu Anita <liviu@ebi.ac.uk>"]
readme = "Readme.md"
packages = [{include = "migration.py"}]

[tool.poetry.dependencies]
python = "^3.10"
bia-integrator-api = { path = "../clients/python/", develop = true }
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
