[tool.poetry]
name = "ro-crate-ingest"
version = "0.0.1"
description = ""
authors = []
readme = "Readme.md"

[tool.poetry.scripts]
ro-crate-ingest = "ro_crate_ingest.cli:ro_crate_ingest"

[tool.poetry.dependencies]
python = "^3.13"
bia-shared-datamodels = { path = "../bia-shared-datamodels", develop = true }
bia-integrator-api = { path = "../clients/python", develop = true }

typer = "^0.12.5"
rocrate = "^0"
linkml = "^1.8.7"
roc-validator = "^0"
deepdiff = "^8.3.0"
pyld = "^2"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
