[tool.poetry]
name = "bia-integrator-tools"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "bia_integrator_tools"}]

[tool.poetry.scripts]
biaint = "bia_integrator_tools.cli:app"
biaconv = "bia_integrator_tools.biaconv:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
fs = "^2.4.16"
jose = "^1.0.0"
bia-integrator-api = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python", branch = "biaint-api-backend" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
