[tool.poetry]
name = "bia-integrator-tools"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "bia_integrator_tools"}]

[tool.poetry.scripts]
biaint = "bia_integrator_tools.cli:app"
biaconv = "bia_integrator_tools.biaconv:app"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
typer = {extras = ["all"], version = "^0.7.0"}
fs = "^2.4.16"
bia-integrator-api = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python_v1" }
bia-integrator-core = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "core" }
ome-zarr = "^0.8.2"
# not direct dependencies of the project, added to speed up `poetry install`
boto3 = "^1.33.12"
botocore = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
