[tool.poetry]
name = "dev_bia-integrator-core"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <matthewh@ebi.ac.uk>"]
packages = [{include = "bia_integrator_core", from="../"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
click = "^8.1.3"
requests = "^2.28.0"
pytest = "*"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bia-integrator-api = { path = "../../clients/python/", develop = true }

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
