[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["Liviu Anita <liviu@ebi.ac.uk>"]
readme = "README.md"
packages = [{include = "python_example"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
# WIP - UNCOMMENT
#bia-integrator-api = { git = "https://github.com/BioImage-Archive/bia-integrator.git", subdirectory = "clients/python", branch = "main" }
bia-integrator-api = { path = "../", develop=true}
typer = "^0.12.3"

[tool.poetry.dev-dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
